[gd_scene load_steps=17 format=3 uid="uid://cqvoex7x3puko"]

[ext_resource type="Script" path="res://Scripts/Boss.gd" id="1_jst5i"]
[ext_resource type="Texture2D" uid="uid://xjcj45rlores" path="res://assets/Entities/Enemy/Robot/Boss_Spritesheet.png" id="1_ok6r2"]
[ext_resource type="PackedScene" uid="uid://gwt4fhjc62hj" path="res://assets/Entities/Enemy/Robot/BossProjectile.tscn" id="2_vba4c"]

[sub_resource type="Animation" id="Animation_ydiua"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(3, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DamageArea:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:damageable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_qj2lw"]
resource_name = "block"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.175, 0.375, 0.575, 0.775, 0.925),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:damageable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_4q5vv"]
resource_name = "death"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.4, 0.55, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6), Vector2i(4, 6), Vector2i(5, 6)]
}

[sub_resource type="Animation" id="Animation_b6thy"]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 7), Vector2i(1, 7)]
}

[sub_resource type="Animation" id="Animation_k4bn5"]
resource_name = "idle"
length = 0.55
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.325, 0.475),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_olyiv"]
resource_name = "shoot"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.3, 0.4, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3)]
}

[sub_resource type="Animation" id="Animation_b0hu4"]
resource_name = "stomp"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.7, 0.775, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DamageArea:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_1kigd"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.325, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_deyxh"]
_data = {
"RESET": SubResource("Animation_ydiua"),
"block": SubResource("Animation_qj2lw"),
"death": SubResource("Animation_4q5vv"),
"hurt": SubResource("Animation_b6thy"),
"idle": SubResource("Animation_k4bn5"),
"shoot": SubResource("Animation_olyiv"),
"stomp": SubResource("Animation_b0hu4"),
"walk": SubResource("Animation_1kigd")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l51cd"]
size = Vector2(25, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3icmk"]
size = Vector2(353, 222)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yokis"]
size = Vector2(22, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o40sr"]
size = Vector2(22, 49)

[node name="Boss" type="CharacterBody2D"]
collision_mask = 2
slide_on_ceiling = false
script = ExtResource("1_jst5i")
attack_collision_left = Vector2(-27, 6)
attack_collision_right = Vector2(23, 6)
projectile = ExtResource("2_vba4c")
damageable = false

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ok6r2")
hframes = 6
vframes = 9
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_deyxh")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, 5.5)
shape = SubResource("RectangleShape2D_l51cd")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, -57)
shape = SubResource("RectangleShape2D_3icmk")

[node name="DamageArea" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(23, 6)
shape = SubResource("RectangleShape2D_yokis")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(23, 5.5)
shape = SubResource("RectangleShape2D_o40sr")

[node name="Timer" type="Timer" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="WillShoot" type="RayCast2D" parent="."]
rotation = -1.5708
target_position = Vector2(-8.91712e-06, 204)

[node name="CheckWall" type="RayCast2D" parent="."]
position = Vector2(0, -11)
rotation = -1.5708
target_position = Vector2(-1.90735e-06, 22)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_damage_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
